updated for deploy

--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/brush.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Arzu's Marketing Portfolio showcasing skills, certifications, and projects in digital marketing, SEO, and analytics." />
+    <meta name="keywords" content="Marketinq portfoliosu, Marketing, Portfolio, SEO, Google Analytics, Digital Marketing, Certifications, Projects" />
+    <meta name="author" content="Arzu Goyushova" />
+
+    <meta property="og:title" content="Arzu's Marketing Portfolio" />
+    <meta property="og:description" content="Showcasing skills and certifications in marketing and SEO." />   
+    <meta property="og:image" content="https://yourdomain.com/path-to-image.png" />
+    <meta property="og:url" content="https://yourgithubusername.github.io" />
+    <meta property="og:type" content="website" />
     <title>Arzu's Portfolio</title>
   </head>
   <body>
